force-app/main/default/objects/ACNW_Setup_Audit_Log__c/ACNW_Setup_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Setup Audit Log</label>
    <nameField>
        <displayFormat>SAL-{000000000}</displayFormat>
        <label>Setup Audit Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Audit Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>