force-app/main/default/objects/ACNW_Setup_Audit_Log__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>