force-app/main/default/objects/ACNW_Setup_Audit_Log__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>