force-app/main/default/objects/ACNW_Setup_Audit_Log__c/fields/Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>Delegate_User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delgate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>