force-app/main/default/objects/ACNW_Setup_Audit_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <referenceTo>ACNW_Request__c</referenceTo>
    <relationshipName>Audit_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>