force-app/main/default/objects/ACNW_Setup_Audit_Log__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>