force-app/main/default/objects/ACNW_Setup_Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity__c</columns>
    <columns>Date__c</columns>
    <columns>Delegate_User__c</columns>
    <columns>Request__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>